Readjusted scale for tables and graphs on mobile. Fixed searchbar length cutting off on mobile.

--- a/neuro_arcade/reactapp/src/styles/App.module.css
+++ b/neuro_arcade/reactapp/src/styles/App.module.css
@@ -547,6 +547,16 @@
             }
         }
     }
+    .Side {
+        .Search {
+            width: 15em;
+        }
+    }
+    .DataBlock {
+        .Graphs {
+            scale: 0.7 !important;
+        }
+    }
 }
 
 #start {
